--- a/package.json
+++ b/package.json
@@ -5,20 +5,38 @@
   "main": "dist/server.js",
   "scripts": {
     "build-ts": "tsc",
-    "start": "npm run serve",
+    "start": "tsc && npm run serve",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3",
-    "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/mongodb": "^3.5.20",
+    "@types/node": "^14.0.11",
+    "@types/pino": "^6.0.1",
+    "@types/pino-http": "^5.0.1",
+    "@types/uuid": "^8.0.0",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.5"
   },
   "dependencies": {
-    "@types/express": "^4.16.0",
-    "express": "^4.16.3"
+    "@types/express": "^4.17.6",
+    "@types/lodash": "^4.14.155",
+    "chai": "^4.2.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "mocha": "^7.2.0",
+    "mongodb": "^3.5.8",
+    "node-rdkafka": "^2.8.1",
+    "pino": "^6.3.2",
+    "pino-http": "^5.2.0",
+    "uuid": "^8.1.0"
   }
 }
